--- a/Frontend/html/admin/notifications.html
+++ b/Frontend/html/admin/notifications.html
@@ -51,7 +51,7 @@
       class="template-customizer-theme-css"
     />
     <link rel="stylesheet" href="../../assets/css/demo.css" />
-
+    <link rel="stylesheet" href="../../css/styles.css" />
     <!-- Vendors CSS -->
     <link
       rel="stylesheet"
@@ -556,6 +556,7 @@
 
     <!-- Toastr JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="../../js/notification.js"></script>
 
     <!-- Page JS -->
     <script src="../../js/admin-auth.js"></script>
