--- a/Frontend/html/admin/security.html
+++ b/Frontend/html/admin/security.html
@@ -51,7 +51,7 @@
       class="template-customizer-theme-css"
     />
     <link rel="stylesheet" href="../../assets/css/demo.css" />
-
+    <link rel="stylesheet" href="../../css/styles.css" />
     <!-- Vendors CSS -->
     <link
       rel="stylesheet"
@@ -212,45 +212,27 @@
               <ul class="navbar-nav flex-row align-items-center ms-auto">
                 <!-- Language -->
                 <li class="nav-item dropdown-language dropdown me-2 me-xl-0">
-                  <a
-                    class="nav-link dropdown-toggle hide-arrow"
-                    href="javascript:void(0);"
-                    data-bs-toggle="dropdown"
-                  >
-                    <i class="ti ti-language rounded-circle ti-md"></i>
+                  <a class="nav-link dropdown-toggle hide-arrow d-flex align-items-center" href="javascript:void(0);" data-bs-toggle="dropdown" id="languageDropdownBtn">
+                    <span class="fi fi-vn me-2" id="current-lang-flag" style="width: 1.5em; height: 1em;"></span>
+                    <span id="current-lang-name">Loading...</span>
                   </a>
-                  <ul class="dropdown-menu dropdown-menu-end">
+                  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdownBtn">
                     <li>
-                      <a
-                        class="dropdown-item"
-                        href="javascript:void(0);"
-                        data-language="vi"
-                      >
-                        <span class="align-middle" data-i18n="vietnamese"
-                          >Vietnamese</span
-                        >
+                      <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);" data-language="vi">
+                        <span class="fi fi-vn me-2" style="width: 1.5em; height: 1em;"></span>
+                        <span class="align-middle">Tiếng Việt</span>
                       </a>
                     </li>
                     <li>
-                      <a
-                        class="dropdown-item"
-                        href="javascript:void(0);"
-                        data-language="en"
-                      >
-                        <span class="align-middle" data-i18n="english"
-                          >English</span
-                        >
+                      <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);" data-language="en">
+                        <span class="fi fi-us me-2" style="width: 1.5em; height: 1em;"></span>
+                        <span class="align-middle">English</span>
                       </a>
                     </li>
                     <li>
-                      <a
-                        class="dropdown-item"
-                        href="javascript:void(0);"
-                        data-language="ja"
-                      >
-                        <span class="align-middle" data-i18n="japanese"
-                          >Japanese</span
-                        >
+                      <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);" data-language="ja">
+                        <span class="fi fi-jp me-2" style="width: 1.5em; height: 1em;"></span>
+                        <span class="align-middle">日本語</span>
                       </a>
                     </li>
                   </ul>
@@ -1120,6 +1102,7 @@
 
     <!-- Toastr JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="../../js/notification.js"></script>
 
     <!-- Page JS -->
     <script src="../../js/admin-auth.js"></script>
