--- a/Frontend/html/auth/forgot-password.html
+++ b/Frontend/html/auth/forgot-password.html
@@ -44,7 +44,7 @@
       class="template-customizer-theme-css"
     />
     <link rel="stylesheet" href="../../assets/css/demo.css" />
-
+    <link rel="stylesheet" href="../../assets/css/styles.css" />
     <!-- Vendors CSS -->
     <link
       rel="stylesheet"
@@ -70,7 +70,6 @@
     <link rel="stylesheet" href="../../css/auth.css" />
     <!-- Toastr CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
-
     <!-- Helpers -->
     <script src="../../assets/vendor/js/helpers.js"></script>
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
@@ -90,44 +89,31 @@
           <div class="d-flex justify-content-end mb-3">
             <div class="dropdown-language dropdown me-2 me-xl-0">
               <a
-                class="btn btn-outline-secondary dropdown-toggle"
+                class="btn btn-outline-secondary dropdown-toggle d-flex align-items-center"
                 href="javascript:void(0);"
                 data-bs-toggle="dropdown"
+                id="languageDropdownBtn"
               >
-                <i class="ti ti-language rounded-circle ti-md"></i>
+                <span class="fi fi-vn me-2" id="current-lang-flag" style="width: 1.5em; height: 1em;"></span>
+                <span id="current-lang-name">Loading...</span>
               </a>
-              <ul class="dropdown-menu dropdown-menu-end">
+              <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdownBtn">
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="javascript:void(0);"
-                    data-language="vi"
-                  >
-                    <span class="align-middle" data-i18n="vietnamese"
-                      >Vietnamese</span
-                    >
+                  <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);" data-language="vi">
+                    <span class="fi fi-vn me-2" style="width: 1.5em; height: 1em;"></span>
+                    <span class="align-middle">Tiếng Việt</span>
                   </a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="javascript:void(0);"
-                    data-language="en"
-                  >
-                    <span class="align-middle" data-i18n="english"
-                      >English</span
-                    >
+                  <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);" data-language="en">
+                    <span class="fi fi-us me-2" style="width: 1.5em; height: 1em;"></span>
+                    <span class="align-middle">English</span>
                   </a>
                 </li>
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="javascript:void(0);"
-                    data-language="ja"
-                  >
-                    <span class="align-middle" data-i18n="japanese"
-                      >Japanese</span
-                    >
+                  <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);" data-language="ja">
+                    <span class="fi fi-jp me-2" style="width: 1.5em; height: 1em;"></span>
+                    <span class="align-middle">日本語</span>
                   </a>
                 </li>
               </ul>
@@ -248,6 +234,7 @@
 
     <!-- Toastr JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="../../js/notification.js"></script>
     <script type="module" src="../../js/auth-utils.js"></script>
     <script type="module" src="../../js/api.js"></script>
     <script type="module" src="../../js/auth-forms.js"></script>
