--- a/Frontend/html/auth/login.html
+++ b/Frontend/html/auth/login.html
@@ -44,7 +44,7 @@
       class="template-customizer-theme-css"
     />
     <link rel="stylesheet" href="../../assets/css/demo.css" />
-
+    <link rel="stylesheet" href="../../assets/css/styles.css" />
     <!-- Vendors CSS -->
     <link
       rel="stylesheet"
@@ -309,6 +309,7 @@
 
     <!-- Toastr JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="../../js/notification.js"></script>
     <script src="../../js/error-handler.js"></script>
     <script type="module" src="../../js/auth-utils.js"></script>
     <script type="module" src="../../js/api.js"></script>
