[ADD]/Add export function and update frontend language files for improved user experience.

--- a/Frontend/html/admin/deactive-users.html
+++ b/Frontend/html/admin/deactive-users.html
@@ -507,6 +507,7 @@
     <script src="../../assets/vendor/libs/@form-validation/umd/plugin-auto-focus/index.min.js"></script>
     <script src="../../assets/vendor/libs/cleavejs/cleave.js"></script>
     <script src="../../assets/vendor/libs/cleavejs/cleave-phone.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
 
     <!-- Main JS -->
     <script src="../../assets/vendor/libs/i18n/i18next.min.js"></script>
@@ -746,7 +747,7 @@
                 <div class="mb-2"><strong data-i18n="status">Status:</strong> <span class="restore-user-status"></span></div>
                 <div class="mb-2"><strong data-i18n="deletedAt">Deleted At:</strong> <span class="restore-user-deletedat"></span></div>
                 <div class="mb-2"><strong data-i18n="address">Address:</strong> <span class="restore-user-address"></span></div>
-                <div class="mb-2"><strong data-i18n="created">Created:</strong> <span class="restore-user-created"></span></div>
+                <div class="mb-2"><strong data-i18n="createdAt">Created:</strong> <span class="restore-user-createdAt"></span></div>
               </div>
             </div>
           </div>
