--- a/Frontend/html/admin/index.html
+++ b/Frontend/html/admin/index.html
@@ -69,7 +69,10 @@
     <link rel="stylesheet" href="../../assets/vendor/css/pages/page-auth.css" />
     <link rel="stylesheet" href="../../css/auth.css" />
     <!-- Toastr CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"
+    />
     <!-- Helpers -->
     <script src="../../assets/vendor/js/helpers.js"></script>
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
@@ -235,25 +238,53 @@
                     data-bs-toggle="dropdown"
                     id="languageDropdownBtn"
                   >
-                    <span class="fi fi-vn me-2" id="current-lang-flag" style="width: 1.5em; height: 1em;"></span>
+                    <span
+                      class="fi fi-vn me-2"
+                      id="current-lang-flag"
+                      style="width: 1.5em; height: 1em"
+                    ></span>
                     <span id="current-lang-name">Loading...</span>
                   </a>
-                  <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdownBtn">
+                  <ul
+                    class="dropdown-menu dropdown-menu-end"
+                    aria-labelledby="languageDropdownBtn"
+                  >
                     <li>
-                      <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);" data-language="vi">
-                        <span class="fi fi-vn me-2" style="width: 1.5em; height: 1em;"></span>
+                      <a
+                        class="dropdown-item d-flex align-items-center"
+                        href="javascript:void(0);"
+                        data-language="vi"
+                      >
+                        <span
+                          class="fi fi-vn me-2"
+                          style="width: 1.5em; height: 1em"
+                        ></span>
                         <span class="align-middle">Tiếng Việt</span>
                       </a>
                     </li>
                     <li>
-                      <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);" data-language="en">
-                        <span class="fi fi-us me-2" style="width: 1.5em; height: 1em;"></span>
+                      <a
+                        class="dropdown-item d-flex align-items-center"
+                        href="javascript:void(0);"
+                        data-language="en"
+                      >
+                        <span
+                          class="fi fi-us me-2"
+                          style="width: 1.5em; height: 1em"
+                        ></span>
                         <span class="align-middle">English</span>
                       </a>
                     </li>
                     <li>
-                      <a class="dropdown-item d-flex align-items-center" href="javascript:void(0);" data-language="ja">
-                        <span class="fi fi-jp me-2" style="width: 1.5em; height: 1em;"></span>
+                      <a
+                        class="dropdown-item d-flex align-items-center"
+                        href="javascript:void(0);"
+                        data-language="ja"
+                      >
+                        <span
+                          class="fi fi-jp me-2"
+                          style="width: 1.5em; height: 1em"
+                        ></span>
                         <span class="align-middle">日本語</span>
                       </a>
                     </li>
@@ -271,7 +302,6 @@
                       <div class="flex-shrink-0 me-3">
                         <div class="avatar avatar-online">
                           <img
-                            alt="User Avatar"
                             class="w-px-40 h-auto rounded-circle user-avatar"
                           />
                         </div>
@@ -280,7 +310,9 @@
                         <span class="fw-semibold d-block user-name"
                           >Loading...</span
                         >
-                        <small class="text-muted user-role" data-i18n="admin">Admin</small>
+                        <small class="text-muted user-role" data-i18n="admin"
+                          >Admin</small
+                        >
                       </div>
                     </div>
                   </a>
@@ -291,7 +323,6 @@
                           <div class="flex-shrink-0 me-3">
                             <div class="avatar avatar-online">
                               <img
-                                alt="User Avatar"
                                 class="w-px-40 h-auto rounded-circle user-avatar"
                               />
                             </div>
@@ -300,7 +331,10 @@
                             <span class="fw-semibold d-block user-name"
                               >Loading...</span
                             >
-                            <small class="text-muted user-role" data-i18n="admin">Admin</small
+                            <small
+                              class="text-muted user-role"
+                              data-i18n="admin"
+                              >Admin</small
                             >
                           </div>
                         </div>
@@ -518,9 +552,15 @@
                           </a>
                         </div>
                         <div class="col-md-3 mb-3">
-                          <a href="#" id="export-all-users-btn" class="btn btn-info w-100">
+                          <a
+                            href="#"
+                            id="export-all-users-btn"
+                            class="btn btn-info w-100"
+                          >
                             <i class="ti ti-download me-2"></i>
-                            <span data-i18n="exportAllUsers">Export All Users</span>
+                            <span data-i18n="exportAllUsers"
+                              >Export All Users</span
+                            >
                           </a>
                         </div>
                         <div class="col-md-3 mb-3">
@@ -620,105 +660,7 @@
         }
       });
     </script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const btn = document.getElementById("export-all-users-btn");
-        if (!btn) return;
-        btn.addEventListener("click", async function (e) {
-          e.preventDefault();
-          btn.disabled = true;
-          btn.innerHTML = '<span class="spinner-border spinner-border-sm me-2"></span>' + (window.i18next ? window.i18next.t("exporting") : "Exporting...");
-          try {
-            const token = localStorage.getItem("authToken");
-            const res = await fetch("http://localhost:5050/api/User?includeDeleted=true", {
-              headers: token ? { Authorization: `Bearer ${token}` } : {},
-            });
-            const json = await res.json();
-            const users = Array.isArray(json.data) ? json.data : [];
-            if (!users.length) {
-              if (window.toastr) toastr.warning(window.i18next ? window.i18next.t("noDataToExport") : "No data to export");
-              btn.disabled = false;
-              btn.innerHTML = '<i class="ti ti-download me-2"></i>' + (window.i18next ? window.i18next.t("exportAllUsers") : "Export All Users");
-              return;
-            }
-            const allFields = users.reduce((fields, u) => {
-              Object.keys(u).forEach(k => { if (!fields.includes(k)) fields.push(k); });
-              return fields;
-            }, []);
-            const preferredOrder = [
-              "id", "username", "email", "fullName", "phoneNumber", "dateOfBirth", "address", "bio", "status", "isVerified", "googleId", "profilePicture", "loginProvider", "createdAt", "updatedAt", "lastLoginAt", "deletedAt", "isDeleted"
-            ];
-            const fields = preferredOrder.filter(f => allFields.includes(f)).concat(allFields.filter(f => !preferredOrder.includes(f)));
-            const fieldToI18nKey = {
-              id: "id",
-              username: "username",
-              fullName: "fullName",
-              email: "email",
-              phoneNumber: "phoneNumber",
-              dateOfBirth: "dateOfBirth",
-              address: "address",
-              bio: "bio",
-              status: "status",
-              isVerified: "emailVerified",
-              googleId: "googleId",
-              profilePicture: "profilePicture",
-              loginProvider: "loginProvider",
-              createdAt: "createdAt",
-              updatedAt: "updatedAt",
-              lastLoginAt: "lastLoginAt",
-              deletedAt: "deletedAt",
-              isDeleted: "isDeleted"
-            };
-            const headers = fields.map(f => window.i18next ? window.i18next.t(fieldToI18nKey[f] || f) : (fieldToI18nKey[f] || f));
-            const rows = users.map(u => fields.map(f => {
-              let val = u[f];
-              if (f === "status") {
-                switch (val) {
-                  case 1: return window.i18next ? window.i18next.t("active") : "Active";
-                  case 2: return window.i18next ? window.i18next.t("inactive") : "Inactive";
-                  case 3: return window.i18next ? window.i18next.t("suspended") : "Suspended";
-                  case 4: return window.i18next ? window.i18next.t("banned") : "Banned";
-                  default: return window.i18next ? window.i18next.t("unknown") : "Unknown";
-                }
-              }
-              if (f === "isVerified") return val ? (window.i18next ? window.i18next.t("yes") : "Yes") : (window.i18next ? window.i18next.t("no") : "No");
-              if (val === undefined || val === null) return "";
-              if (val instanceof Date) return val.toLocaleString("en-GB");
-              if (typeof val === "string" && val.match(/^\d{4}-\d{2}-\d{2}T/)) {
-                try { return new Date(val).toLocaleString("en-GB"); } catch { return val; }
-              }
-              return val;
-            }));
-            function escapeCsvValue(val) {
-              if (val == null) return "";
-              val = String(val);
-              if (val.includes('"')) val = val.replace(/"/g, '""');
-              if (val.includes(',') || val.includes('\n') || val.includes('"')) {
-                return `"${val}"`;
-              }
-              return val;
-            }
-            const delimiter = ";";
-            const headersCsv = headers.map(escapeCsvValue).join(delimiter);
-            const rowsCsv = rows.map(r => r.map(escapeCsvValue).join(delimiter)).join("\n");
-            const BOM = "\uFEFF";
-            const csv = BOM + headersCsv + "\n" + rowsCsv;
-            const blob = new Blob([csv], { type: 'text/csv;charset=utf-8;' });
-            const link = document.createElement('a');
-            link.href = URL.createObjectURL(blob);
-            link.download = 'users_export_' + (new Date().toISOString().replace(/[:.]/g, '-')) + '.csv';
-            document.body.appendChild(link);
-            link.click();
-            document.body.removeChild(link);
-            if (window.toastr) toastr.success(window.i18next ? window.i18next.t("exportSuccess") : "Export successful");
-          } catch (err) {
-            if (window.toastr) toastr.error(window.i18next ? window.i18next.t("exportFailed") : "Export failed");
-          } finally {
-            btn.disabled = false;
-            btn.innerHTML = '<i class="ti ti-download me-2"></i>' + (window.i18next ? window.i18next.t("exportAllUsers") : "Export All Users");
-          }
-        });
-      });
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
   </body>
 </html>
