--- a/Frontend/html/admin/active-users.html
+++ b/Frontend/html/admin/active-users.html
@@ -185,7 +185,7 @@
                     <div class="d-flex">
                       <div class="flex-shrink-0 me-3">
                         <div class="avatar avatar-online">
-                          <img alt="User Avatar" class="w-px-40 h-auto rounded-circle user-avatar" />
+                          <img class="w-px-40 h-auto rounded-circle user-avatar" />
                         </div>
                       </div>
                       <div class="flex-grow-1">
@@ -200,7 +200,7 @@
                         <div class="d-flex">
                           <div class="flex-shrink-0 me-3">
                             <div class="avatar avatar-online">
-                              <img alt="User Avatar" class="w-px-40 h-auto rounded-circle user-avatar" />
+                              <img class="w-px-40 h-auto rounded-circle user-avatar" />
                             </div>
                           </div>
                           <div class="flex-grow-1">
@@ -504,6 +504,7 @@
 
     <!-- DataTables Export Dependencies -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
     <script src="https://cdn.datatables.net/buttons/2.4.1/js/dataTables.buttons.min.js"></script>
@@ -661,7 +662,7 @@
               <div class="col-md-3 text-center mb-3">
                 <div class="d-flex flex-column align-items-center justify-content-center" style="gap: 12px;">
                   <div class="avatar avatar-xl d-flex align-items-center justify-content-center" style="width: 100px; height: 100px; margin: 0 auto;">
-                    <img id="view-user-avatar" src="" alt="User Avatar" class="rounded-circle" style="width: 100px; height: 100px; object-fit: cover; display: none;" />
+                    <img id="view-user-avatar" src="" class="rounded-circle" style="width: 100px; height: 100px; object-fit: cover; display: none;" />
                     <div id="avatar-fallback" class="avatar-initial rounded-circle" style="width: 100px; height: 100px; display: none; align-items: center; justify-content: center; font-weight: bold; font-size: 40px;"></div>
                   </div>
                   <div class="user-status-badge d-flex justify-content-center"></div>
@@ -765,7 +766,7 @@
                     <div class="mb-2"><strong data-i18n="status">Status:</strong> <span class="delete-user-status"></span></div>
                     <div class="mb-2"><strong data-i18n="lastLoginAt">Last Login:</strong> <span class="delete-user-lastlogin"></span></div>
                     <div class="mb-2"><strong data-i18n="address">Address:</strong> <span class="delete-user-address"></span></div>
-                    <div class="mb-2"><strong data-i18n="created">Created:</strong> <span class="delete-user-created"></span></div>
+                    <div class="mb-2"><strong data-i18n="createdAt">Created:</strong> <span class="delete-user-createdAt"></span></div>
                   </div>
                 </div>
               </div>
